# projectDB

./: .coverage  .env.example  README.md  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: api_base.py  db_manager.py  db_utils.py  hh_api.py  main.py  other.py
tests/: conftest.py  test_DBmanager.py  test_api.py  test_utils.py
