[tool.poetry]
name = "projectdb"
version = "0.1.0"
description = ""
authors = ["Julia <yulia.2018.ivanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
